public/styles/index.css
/* ... */
nav #nav-actions .browse-dropdown .dropdown-head {
    color: var(--primary-color);
    cursor: pointer;
    display: flex;
    gap: 7px;

    &>svg {
        width: 18px;
    }
}

nav #nav-actions .browse-dropdown .dropdown-body {
    background-color: none;
    border-right: 2px solid var(--primary-color);
    border-radius: 2px;
    padding: 10px 15px 10px 20px;
    width: max-content;
    height: 150px;
    display: flex;
    flex-direction: column;
    align-items: end;
    position: absolute;
    top: 100%;
    right: 8px;
    overflow-x: hidden;
    overflow-y: auto;
    transition: 0.3s;
    opacity: 1;
    visibility: visible;

    scrollbar-width: none;

    &::-webkit-scrollbar {
        display: none;
    }
}

nav #nav-actions .browse-dropdown .dropdown-body.disabled {
    /* display: none; */
    height: 0px;
    opacity: 0;
    visibility: hidden;
}

nav #nav-actions .browse-dropdown .dropdown-body .dropdown-options {
    border-bottom: 2px solid transparent;
    width: max-content;
    text-align: right;
    transition: 0.3s;

    &:hover {
        border-bottom: 2px solid var(--primary-color);
    }
}

nav #nav-actions .browse-dropdown .dropdown-body .dropdown-options:not(:last-of-type) {
    margin-bottom: 10px;
}

nav #nav-actions .browse-dropdown .dropdown-body .dropdown-options a {
    color: var(--primary-color);
}

nav #nav-actions #register {
    background-color: var(--primary-color);
    border-radius: 10px;
    color: var(--accent-color);
    padding: 7px 30px;
}

main {
    width: 100dvw;
    height: 100dvh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.starting-block {
    width: 100%;
    max-width: 700px;
    padding-bottom: 70px;
}

.starting-block .text {
    color: var(--primary-color);
    font-size: 28px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 20px;
}

form .file-upload {
    background-color: var(--primary-color);
    border-radius: 7dpx;
    color: var(--accent-color);
    cursor: pointer;
    padding: 10px;
    display: flex;
    justify-content: center;
}

form .file-upload input {
    display: none;
}

.view-contents {
    max-width: 700px;
    width: 100%;
    height: calc(100% - 125px);
    margin-top: 125px;
    display: flex;
    flex-direction: column;
}

.view-contents #category-box {
    border-left: 3px solid var(--primary-color);
    color: var(--primary-color);
    cursor: default;
    padding-left: 10px;
    display: flex;
    gap: 10px;
    align-items: center;
}

.view-contents #category-box #category {
    font-size: 28px;
    font-weight: bold;
}

.view-contents #category-box #tag {
    background-color: var(--primary-color);
    border-radius: 50px;
    color: var(--accent-color);
    font-size: 14px;
    padding: 4px 17px;
}

.view-contents .archive-list-box {
    margin-top: 50px;
    height: 100%;
    padding-bottom: 150px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: auto;
}

.view-contents .archive-list-box.empty {
    color: var(--primary-color);
    font-weight: bold;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 51%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.view-contents #archiver-box {
    color: var(--primary-color);
    margin-top: 3px;
    margin-left: -10px;
    margin-bottom: 50px;
    display: flex;
    gap: 2px;
    align-items: center;
}

.view-contents #summary-contents {
    color: var(--primary-color);
}

.view-contents #summary-contents #title-box #title {
    font-size: 28px;
    font-weight: bold;
}

.view-contents #summary-contents #author-year-box {
    margin-bottom: 50px;
}

.view-contents #summary-contents #abstract-box p:first-of-type {
    font-size: 28px;
    font-weight: bold;
}

.view-contents #summary-contents #action-box {
    display: flex;
    justify-content: right;
}

.view-contents #summary-contents #action-box #view-link {
    background-color: var(--primary-color);
    border-radius: 10px;
    color: var(--accent-color);
    font-size: 14px;
    text-decoration: none;
    padding:  15px;
    display: flex;
    gap: 7px;
    align-items: center;
    justify-content: center;
}

.auth-card {
    border: 3px solid var(--primary-color);
    border-radius: 7px;
    box-shadow: 0 3px 3px 2px #00000033;
    width: 100%;
    max-width: 500px;
    padding: 30px;
    position: relative;
}

.auth-card > a.logo {
    color: var(--primary-color);
    font-size: 32px;
    font-weight: bold;
    text-decoration: none;
    display: flex;
    gap: 7px;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: calc(100% + 20px);
    left: 50%;
    transform: translateX(-50%);
}

.auth-card .header {
    color: var(--primary-color);
    margin-bottom: 20px;
}

.auth-card .header .title {
    font-size: 30px;
    font-weight: bold;
}

.component.card.article {
    border: 2px solid var(--primary-color);
    border-radius: 10px;
    box-shadow: 0 3px 4px 0 #00000028;
    color: var(--primary-color);
    padding: 20px;
    text-decoration: none;
    display: flex;
    transition: 0.3s;

    &:hover {
        background-color: var(--primary-color);
    }

    &:hover * {
        color: var(--accent-color);
    }
}

.component.card.article .archive-info-box {
    flex: 1 1 auto;
}

.component.card.article .title {
    font-weight: bold;
    font-size: 20px;
}

.component.card.article .author,
.component.card.article .year {
    font-size: 14px;
}

.component.card.article .category-box {
    display: flex;
    align-items: end;
}

.component.card.article .category {
    font-weight: bold;
    font-size: 14px;
    line-height: 95%;
}

.settings-main {
    align-items: flex-start;
    overflow: auto;
}

.settings-shell {
    color: var(--primary-color);
    width: min(980px, calc(100% - 50px));
    margin-top: 120px;
    padding-bottom: 60px;
}
/* ... */

